# Pangolin

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  README.txt  _config.yml  appveyor.yml  build.md  examples.md  github-embed.css  github-embed.min.js  index.md  package.xml
_/: appveyor.yml  package.xml
_/src/: config.h.in
components/pango2/: CMakeLists.txt
components/pango_assets/: CMakeLists.txt
components/pango_context/: CMakeLists.txt
components/pango_core/: CMakeLists.txt
components/pango_display/: CMakeLists.txt
components/pango_geometry/: CMakeLists.txt
components/pango_glgeometry/: CMakeLists.txt
components/pango_image/: CMakeLists.txt
components/pango_opengl/: CMakeLists.txt
components/pango_packet2/: CMakeLists.txt
components/pango_packetstream/: CMakeLists.txt
components/pango_plot/: CMakeLists.txt
components/pango_python/: CMakeLists.txt
components/pango_render/: CMakeLists.txt
components/pango_scene/: CMakeLists.txt
components/pango_tools/: CMakeLists.txt
components/pango_vars/: CMakeLists.txt
components/pango_video/: CMakeLists.txt
components/pango_windowing/: CMakeLists.txt  CMakeLists.txt-
components/tinyobj/: CMakeLists.txt
examples/: 1.hello.cpp  10.shapes.cpp  10.test.cpp  10.video.cpp  11.scene-group.cpp  12.named_drawables.cpp  13.plot-experiment.cpp  14.drawable_at_and_axes.cpp  14.mesh-loading.cpp  14.multitouch.cpp  14.shared-context.cpp  15.reload-example.cpp  2.layouts.cpp  3.widgets.cpp  4.video.cpp  5.video-seek.cpp  6.overlay.cpp  7.solids.cpp  8.pixel-perfect.cpp  9.flex.cpp  CMakeLists.txt  README.md  example.cpp
examples/BasicOpenGL/: 3_gl_intro_classic_triangle_vbo_shader.cpp  3_gl_intro_pango_triangle_vbo_shader.cpp  5_gl_intro_view_transforms.cpp  Basic OpenGL Tutorial with Pangolin.md  CMakeLists.txt  README.md
examples/DensityPlot/: CMakeLists.txt  main.cpp
examples/HelloPangolin/: CMakeLists.txt  main.cpp  main_2.cpp  main_widget.cpp
examples/HelloPangolinOffscreen/: CMakeLists.txt  main.cpp
examples/HelloPangolinThreads/: CMakeLists.txt  main.cpp
examples/Oculus/: CMakeLists.txt  OculusHud.cpp  OculusHud.h  main.cpp
examples/PythonExamples/: SimpleDisplay.py  SimpleVideo.py
examples/SharedMemoryCamera/: CMakeLists.txt  main.cpp
examples/SharedMemoryVideoWriter/: CMakeLists.txt  main.cpp
examples/SimpleDisplay/: .glconsole_settings  CMakeLists.txt  PyInterpreter.h  PyUniqueObj.h  PythonView.h  app.cfg  main.cpp
examples/SimpleDisplayImage/: CMakeLists.txt  main.cpp
examples/SimpleMultiDisplay/: CMakeLists.txt  main.cpp
examples/SimpleMultiDisplayOffscreen/: CMakeLists.txt  main.cpp
examples/SimpleMultiWindow/: CMakeLists.txt  main.cpp
examples/SimpleOculus/: CMakeLists.txt  main.cpp
examples/SimplePlot/: CMakeLists.txt  main.cpp
examples/SimplePlotWithMarkerBars/: CMakeLists.txt  main.cpp
examples/SimpleRecord/: CMakeLists.txt  main.cpp
examples/SimpleRepeatVideo/: CMakeLists.txt  main.cpp
examples/SimpleScene/: CMakeLists.txt  main.cpp
examples/SimpleVideo/: CMakeLists.txt  main.cpp
examples/Test/: backtrace.h  main.cpp  notifier.h  text.h  widget_panel.h
examples/VBODisplay/: CMakeLists.txt  kernal.cu  main.cpp
examples/WidgetPanelExample/: CMakeLists.txt  main.cpp
examples/_Tutorial/: 1_gl_intro_classic_triangle.cpp  1_gl_intro_pango_triangle.cpp  2_gl_intro_classic_triangle_vbo.cpp  2_gl_intro_pango_triangle_vbo.cpp  3_gl_intro_classic_triangle_vbo_shader.cpp  4_gl_intro_viewport.cpp  CMakeLists.txt
pangolin/: CMakeLists.txt  PangolinConfig.cmake.in  PangolinConfig.h.in  cg.h  config.h.in  display.cpp  display.h  display_internal.h  ffmpeg.cpp  ffmpeg.h  firewire.cpp  firewire.h  gl.cpp  gl.h  gl_internal.h  glcuda.h  gldraw.h  glsl.h  gltextureview.h  glvbo.h  input_record_repeat.cpp  input_record_repeat.h  openni.cpp  openni.h  pangolin.h  platform.h  plotter.cpp  plotter.h  pvn_video.cpp  pvn_video.h  simple_math.h  test.cpp  threaded_file_writer.cpp  threaded_file_writer.h  threadedfilebuf.cpp  threadedfilebuf.h  timer.h  v4l.cpp  v4l.h  vars.cpp  (+12 more)
pangolin/video/: ffmpeg.cpp  ffmpeg.h  firewire.cpp  firewire.h  openni.cpp  openni.h  pvn_video.cpp  pvn_video.h  v4l.cpp  v4l.h
src/: CMakeLists.txt  PangolinConfig.cmake.in  PangolinConfigVersion.cmake.in  config.h.in  datalog.cpp  display.cpp  display_android.cpp  display_glut.cpp  file_utils.cpp  glfont.cpp  glfontdata.h  glpangoglu.cpp  handler.cpp  handler_glbuffer.cpp  image_load.cpp  input_record_repeat.cpp  opengl_render_state.cpp  plotter.cpp  threadedfilebuf.cpp  vars.cpp  video.cpp  video_common.cpp  video_output.cpp  video_record_repeat.cpp  video_recorder.cpp  video_splitter.cpp  view.cpp  viewport.cpp  widgets.cpp
src/Console/: ConsoleView.cpp
src/console/: ConsoleView.cpp
src/display/: display.cpp  display.cpp.orig  image_view.cpp  opengl_render_state.cpp  view.cpp  viewport.cpp  window.cpp  window_factory.cpp
src/factory/: factory_registry_base.cpp
src/geometry/: geometry.cpp  geometry_obj.cpp  geometry_ply.cpp  glgeometry.cpp
src/gl/: glchar.cpp  gldraw.cpp  glfont.cpp  glpangoglu.cpp  gltext.cpp  stb_truetype.h
src/handler/: handler.cpp  handler_image.cpp
src/hud/: oculus_hud.cpp
src/image/: image_common.cpp  image_io.cpp  image_io_bmp.cpp  image_io_exr.cpp  image_io_jpg.cpp  image_io_lz4.cpp  image_io_packed12bit.cpp  image_io_pango.cpp  image_io_png.cpp  image_io_ppm.cpp  image_io_raw.cpp  image_io_tga.cpp  image_io_zstd.cpp  image_load.cpp  pixel_format.cpp
src/ios/: PangolinAppDelegate.mm  PangolinUIView.mm  PangolinViewController.mm
src/log/: iPacketStream.cpp  oPacketStream.cpp  packet.cpp  packetstream.cpp  packetstream_reader.cpp  packetstream_session.h  packetstream_writer.cpp  playback_session.cpp  playback_session.h  record_session.h
src/plot/: datalog.cpp  plotter.cpp
src/python/: PyInterpreter.cpp  PyModulePangolin.cpp  PyView.cpp  pyinterpreter.cpp  pypangolin_init.cpp
src/tools/: video_viewer.cpp
src/utils/: avx_math.cpp  condition_variable.cpp  (+7 more)
tools/: CMakeLists.txt
(+1280 files in other folders)
