<?xml version="1.0"?>
<!-- ROS Catkin package.xml file -->
<package format="2">
  <name>pangolin</name>
  <version>0.7.0</version>
  <description>pangolin</description>
  <maintainer email="stevenlovegrove@gmail.com">Steven Lovegrove</maintainer>
  <author     email="stevenlovegrove@gmail.com">Steven Lovegrove</author>
  <license>MIT</license>
  <buildtool_depend>cmake</buildtool_depend>
  <depend>libglew-dev</depend>
  <depend>cmake</depend>
  <depend>python3-dev</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
