<?xml version="1.0"?>
<package format="2">
  <name>pangolin</name>
  <version>0.5.0</version>
  <description>pangolin</description>
  <maintainer email="stevenlovegrove@gmail.com">Steven Lovegrove</maintainer>
  <author     email="stevenlovegrove@gmail.com">Steven Lovegrove</author>
  <license>MIT</license>
  <buildtool_depend>cmake</buildtool_depend>
  <depend>libglew-dev</depend>
  <depend>cmake</depend>
  <depend>python</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
